repos/test-emily-game/contents/sample/test/macro/fail/ternOpen.em
# Test macro internal failure.
# Expect failure

23 ? 1